--- a/pawnshop/static/description/index.html
+++ b/pawnshop/static/description/index.html
@@ -17,7 +17,7 @@
                pawnshop owners who demand efficiency, accuracy, and growth.
             </p>
             <p class="text-center" style="color:#ffffff; font-size:14px;">
-               Community &amp; Enterprise • Multi-Branch • Odoo 19 Ready
+               Community &amp; Enterprise | Multi-Branch | Odoo 19 Ready
             </p>
          </div>
       </div>
@@ -430,7 +430,7 @@
                Technical Specifications
             </h3>
             <div style="max-width:800px; margin:0 auto; padding:0 20px;">
-               <p><strong>Platform:</strong> Odoo 19.0 • Python Backend • PostgreSQL • Web UI • Chart.js • Responsive</p>
+               <p><strong>Platform:</strong> Odoo 19.0 | Python Backend | PostgreSQL | Web UI | Chart.js | Responsive</p>
                <p><strong>Module Dependencies:</strong> Base, Accounting, Inventory, Products, Contacts, Mail</p>
                <p><strong>Included Components:</strong> Models, XML views, PDF reports, wizards, SQL reports, security groups, demo data, email templates, crons</p>
                <p><strong>License:</strong> LGPL-3</p>
@@ -449,8 +449,8 @@
                Competitive Advantages
             </h3>
             <div style="max-width:800px; margin:0 auto; padding:0 20px; text-align:center;">
-               <p style="font-size:15px; color:#444;">Industry-specific &amp; complete • No vendor lock-in • Customizable &amp; scalable</p>
-               <p style="font-size:15px; color:#444;">Professional support &amp; updates • Cost-effective • Quick implementation • Built on Odoo</p>
+               <p style="font-size:15px; color:#444;">Industry-specific &amp; complete | No vendor lock-in | Customizable &amp; scalable</p>
+               <p style="font-size:15px; color:#444;">Professional support &amp; updates | Cost-effective | Quick implementation | Built on Odoo</p>
             </div>
          </div>
       </div>
